
    HDFS-4699. TestPipelinesFailover#testPipelineRecoveryStress fails
    sporadically (Chris Nauroth via kihwal)

    HDFS-3436. In DataNode.transferReplicaForPipelineRecovery(..), it should
    use the stored generation stamp to check if the block is valid.  (Vinay
    via szetszwo)

    HDFS-4477. Secondary namenode may retain old tokens. (daryn via kihwal)

Release 0.23.7 - 2013-04-18

  INCOMPATIBLE CHANGES

  NEW FEATURES
    HDFS-395.  DFS Scalability: Incremental block reports. (Tomasz Nykiel
               via hairong)

  IMPROVEMENTS
    HDFS-4222. NN is unresponsive and loses heartbeats from DNs when 
    configured to use LDAP and LDAP has issues. (Xiaobo Peng, suresh)

    HDFS-3817. Avoid printing SafeModeException stack trace.
    (Brandon Li via suresh)

  OPTIMIZATIONS
    HDFS-2477. Optimize computing the diff between a block report and the
               namenode state. (Tomasz Nykiel via hairong)

    HDFS-2495. Increase granularity of write operations in ReplicationMonitor
    thus reducing contention for write lock. (Tomasz Nykiel via hairong)

    HDFS-2476. More CPU efficient data structure for under-replicated,
               over-replicated, and invalidated blocks.
               (Tomasz Nykiel via todd)

    HDFS-4532. RPC call queue may fill due to current user lookup (daryn)

  BUG FIXES
    HDFS-4288. NN accepts incremental BR as IBR in safemode (daryn via kihwal)

    HDFS-1765. Block Replication should respect under-replication
    block priority. (Uma Maheswara Rao G via eli)

    HDFS-4444. Add space between total transaction time and number of
    transactions in FSEditLog#printStatistics. (Stephen Chu via tgraves)

    HDFS-3119. Overreplicated block is not deleted even after the replication
    factor is reduced after sync follwed by closing that file. (Ashish Singhi
    via umamahesh)

    HDFS-4462. 2NN will fail to checkpoint after an HDFS upgrade from a
    pre-federation version of HDFS. (atm)
